--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flukebot-progress-tracker",
   "version": "0.1.0",
-  "homepage": "https://flukebot.github.io",
+  "homepage": "https://flukebot.github.io/build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
