--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://flukebot.github.io/build",
   "private": true,
   "dependencies": {
+    "@projectstorm/react-diagrams": "^7.0.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
